paragrapher align center fixed

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ h1 {
 p {
     font-size: 0.8em;
     font-weight: 400;
+    text-align: center;
 
     margin-bottom: 30px;
     margin-left: 15%;
